--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>iu tớ hong :3</title>
+    <title>thích em hong :3</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,14 +23,14 @@
         <div class="rect4"></div>
         <div class="rect5"></div>
       </div>
-  </div>
+  </div>thích em đúng hông 
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2>Cậu yêu tớ có phải không nào ._.</h2>
+          <h2>Anh thích em có phải không nào ._.</h2>
           <h4> Trả lời đi nhó :( hông trả lời tức là iu mình) </h4>
         </header>
-        <button id="yes" type="button" class="btn btn-danger btn-lg">Yêu ơi là yêuuuuuu <333 </button>
+        <button id="yes" type="button" class="btn btn-danger btn-lg">Thích thì thì thích mà không thích buộc thíchhh <333 </button>
         <button id="no" type="button" class="btn btn-info btn-lg">Cậu mơ à :333 </button>
       </div>
     </div>
